bug 177470: fix for IE layout problem

--- a/planet/output/css/main/content_planet.css
+++ b/planet/output/css/main/content_planet.css
@@ -114,7 +114,6 @@
 	div.post-contents blockquote { line-height: 150%; margin: 1em !important; padding: 1em !important; }
 	div.post-contents pre { margin: 1em !important; padding: 1em !important; }
 	div.post-contents hr { margin-top: 1em !important; list-style: 1px solid; }
-	div.post-contents table { width: 50% !important; margin-top: 0.5em! important;}
 	
 	div.post-title span { font-size: 100%; }
 
